--- a/templates/details.html
+++ b/templates/details.html
@@ -56,9 +56,9 @@
                             <p><a href = "{{ url_for('info_page') }}" title = "Info" style = "text-decoration: none; color: #00A66F;">Info</a></p>
                         </div>
                         <div class = "tools" id = "tools">
-                            <img src = "../static/images/search.PNG" alt="AquaEmi's search icon" style = "width: 2vw" id = "search_engine"></a>
-                            <a href = "{{ url_for('home_page') }}"><img src = "../static/images/notifications.PNG" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
-                            <a href = "{{ url_for('home_page') }}"><img src = "../static/images/profile.PNG" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
+                            <img src = "../static/images/search.png" alt="AquaEmi's search icon" style = "width: 2vw" id = "search_engine"></a>
+                            <a href = "{{ url_for('home_page') }}"><img src = "../static/images/notifications.png" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
+                            <a href = "{{ url_for('home_page') }}"><img src = "../static/images/profile.png" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
                         </div>
                     </div>
                 </div>
@@ -67,14 +67,14 @@
         <section>
             <div class = "overlay_search" id = "overlay_search">
                 <div class = "search_bar" id = "search_bar">
-                    <img src = "../static/images/search_back.PNG" style = "width: 1.5vw; height: 0.5w; margin-bottom: -0.15vw;" id = "search_back">
+                    <img src = "../static/images/search_back.png" style = "width: 1.5vw; height: 0.5w; margin-bottom: -0.15vw;" id = "search_back">
                     <input type = "text" id = "search_content" name = "search_content" placeholder = "Enter your location..." style = "font-size: 1vw;">
                     <i class="fa-solid fa-x fa-2xs" style="color: #00a56f;" id = "clear_search" onclick = "document.getElementById('search_content').value = ''"></i>
                 </div>
                 <div class = "search_result_box" id = "search_result_box">
                     {% for watersource in watersources_data %}
                         <div class = "search_result" id = "search_result" data_search_term="{{watersource.name}}" style="display: none;" onclick="location.href='{{url_for('detail_page', rivername=watersource.name)}}';">
-                            <img src = "../static/images/location.PNG" style = "width: 1vw; height: 1.3vw;">
+                            <img src = "../static/images/location.png" style = "width: 1vw; height: 1.3vw;">
                             <p style = "font-size: 1vw; color: #616161; margin: 0.2vw 0 0 0.7vw; ">{{watersource.name}}</p>
                             <p style = "font-size: 0.8vw; font-weight: bold; margin: 0.3vw 0 0 0.7vw;">{{watersource.followers}}</p>
                             <div class = "wqi_search_result" id = "wqi_search_result">{{watersource.quality}}</div>
@@ -85,11 +85,11 @@
 
             <div class = "content" id = "content">
                 <div class = "destination" id = "destination">
-                    <img src="../static/images/location.PNG" style = "width: 1.3vw; height: 1.5vw; margin-top: -0.15vw">
+                    <img src="../static/images/location.png" style = "width: 1.3vw; height: 1.5vw; margin-top: -0.15vw">
                     <p style = "margin: 0 0.5vw 0 0.7vw; font-weight: bold; color:#01a26d"> {{ data.country }} </p>
-                    <img src="../static/images/more.PNG" style = "width: 1vw; height: 1.3vw;">
+                    <img src="../static/images/more.png" style = "width: 1vw; height: 1.3vw;">
                     <p style = "margin: 0 0.5vw 0 0.7vw; font-weight: bold; color:#01a26d">Ho Chi Minh city</p> <!-- TODO -->
-                    <img src="../static/images/more.PNG" style = "width: 1vw; height: 1.3vw;">
+                    <img src="../static/images/more.png" style = "width: 1vw; height: 1.3vw;">
                     <p style = "margin: 0 0.5vw 0 0.7vw; font-weight: bold; color:#01a26d">{{ rivername }}</p>
                 </div>
                 <div class = "headings" id = "headings">
@@ -99,15 +99,15 @@
                         <p style = "font-size: 0.8vw; font-weight: bold;">Last updated at 9:22pm August 5 (local time)</p>
                         <div class = "followers" id = "followers">
                             <p style = "font-size: 0.8vw;"><mark style = "background-color: #fff; font-weight: bold;"> {{ data.followers }} </mark> people follow this city</p>
-                            <img src = "../static/images/people.PNG" style = "width: 6.5vw; height: 1.8vw; margin: 0.3vw 0 0 1vw;">
-                            <img src = "../static/images/heart2.PNG" style = "width: 2vw; height: 2.1vw; margin: 0.3vw 0 0 0.5vw;">
-                            <img src = "../static/images/share.PNG" style = "width: 2.1vw; height: 2.2vw; margin: 0.3vw 0 0 0.5vw;">
+                            <img src = "../static/images/people.png" style = "width: 6.5vw; height: 1.8vw; margin: 0.3vw 0 0 1vw;">
+                            <img src = "../static/images/heart2.png" style = "width: 2vw; height: 2.1vw; margin: 0.3vw 0 0 0.5vw;">
+                            <img src = "../static/images/share.png" style = "width: 2.1vw; height: 2.2vw; margin: 0.3vw 0 0 0.5vw;">
                         </div>
                     </div>
                 </div>
                 <div class = "general" id = "general">
                     <div class = "map" id = "map">
-                        <img src = "../static/images/map2.PNG" style = "width: 25vw; height: 30vw; border-radius: 1vw;">
+                        <img src = "../static/images/map2.png" style = "width: 25vw; height: 30vw; border-radius: 1vw;">
                         <p style = "font-size: 1.3vw; color: #fff; margin: -6vw 0 0 1vw; font-weight: bold;">{{ rivername }} Water Pollution Map</p>
                         <button class = "view_map" id = "view_map"><a href="map">VIEW MAP</a></button>
                     </div>
@@ -131,15 +131,15 @@
 
                             <div class = "others" id = "others">
                                 <div class = "temperature" id = "temperature">
-                                    <img src = "../static/images/temperature4.PNG" style = "width: 4vw; height: 4vw;">
+                                    <img src = "../static/images/temperature4.png" style = "width: 4vw; height: 4vw;">
                                     <p style = "font-size: 1.5vw; color: #94D53F; margin: 1.1vw 0 0 0.2vw">{{ data.temperature }}</p>
                                 </div>
                                 <div class = "wind" id = "wind">
-                                    <img src = "../static/images/wind3.PNG" style = "width: 3vw; height: 3vw; margin: 0.5vw 0 0 0;">
+                                    <img src = "../static/images/wind3.png" style = "width: 3vw; height: 3vw; margin: 0.5vw 0 0 0;">
                                     <p style = "font-size: 1.5vw; color: #94D53F; margin: 1.1vw 0 0 0.7vw;">{{ data.flow }} </p>
                                 </div>
                                 <div class = "wet" id = "wet">
-                                    <img src = "../static/images/wet2.PNG" style = "width: 2vw; height: 3vw; margin: 0.5vw 0 0 0;">
+                                    <img src = "../static/images/wet2.png" style = "width: 2vw; height: 3vw; margin: 0.5vw 0 0 0;">
                                     <p style = "font-size: 1.5vw; color: #94D53F; margin: 1.1vw 0 0 0.5vw;">{{ data.turbidity }}</p>
                                 </div>
                             </div>
@@ -164,15 +164,15 @@
 
                             <div class = "others" id = "others">
                                 <div class = "temperature" id = "temperature">
-                                    <img src = "../static/images/temperature4.PNG" style = "width: 4vw; height: 4vw;">
+                                    <img src = "../static/images/temperature4.png" style = "width: 4vw; height: 4vw;">
                                     <p style = "font-size: 1.5vw; color: #ff9249; margin: 1.1vw 0 0 0.2vw">{{ data.temperature }}</p>
                                 </div>
                                 <div class = "wind" id = "wind">
-                                    <img src = "../static/images/wind3.PNG" style = "width: 3vw; height: 3vw; margin: 0.5vw 0 0 0;">
+                                    <img src = "../static/images/wind3.png" style = "width: 3vw; height: 3vw; margin: 0.5vw 0 0 0;">
                                     <p style = "font-size: 1.5vw; color: #ff9249; margin: 1.1vw 0 0 0.7vw;">{{ data.flow }} </p>
                                 </div>
                                 <div class = "wet" id = "wet">
-                                    <img src = "../static/images/wet2.PNG" style = "width: 2vw; height: 3vw; margin: 0.5vw 0 0 0;">
+                                    <img src = "../static/images/wet2.png" style = "width: 2vw; height: 3vw; margin: 0.5vw 0 0 0;">
                                     <p style = "font-size: 1.5vw; color: #ff9249; margin: 1.1vw 0 0 0.5vw;">{{ data.turbidity }}</p>
                                 </div>
                             </div>
@@ -197,15 +197,15 @@
 
                             <div class = "others" id = "others">
                                 <div class = "temperature" id = "temperature">
-                                    <img src = "../static/images/temperature4.PNG" style = "width: 4vw; height: 4vw;">
+                                    <img src = "../static/images/temperature4.png" style = "width: 4vw; height: 4vw;">
                                     <p style = "font-size: 1.5vw; color: #F63E3E; margin: 1.1vw 0 0 0.2vw">{{ data.temperature }}</p>
                                 </div>
                                 <div class = "wind" id = "wind">
-                                    <img src = "../static/images/wind3.PNG" style = "width: 3vw; height: 3vw; margin: 0.5vw 0 0 0;">
+                                    <img src = "../static/images/wind3.png" style = "width: 3vw; height: 3vw; margin: 0.5vw 0 0 0;">
                                     <p style = "font-size: 1.5vw; color: #F63E3E; margin: 1.1vw 0 0 0.7vw;">{{ data.flow }} </p>
                                 </div>
                                 <div class = "wet" id = "wet">
-                                    <img src = "../static/images/wet2.PNG" style = "width: 2vw; height: 3vw; margin: 0.5vw 0 0 0;">
+                                    <img src = "../static/images/wet2.png" style = "width: 2vw; height: 3vw; margin: 0.5vw 0 0 0;">
                                     <p style = "font-size: 1.5vw; color: #F63E3E; margin: 1.1vw 0 0 0.5vw;">{{ data.turbidity }}</p>
                                 </div>
                             </div>
@@ -219,7 +219,7 @@
                                 <p style = "font-size: 1vw;">Data provided by</p>
                                 <p style = "font-size: 1.2vw; font-weight: bold; margin-top: -0.5vw;">WQI modeled using satellite data</p>
                             </div>
-                            <img src = "../static/images/more.PNG" style = "width: 2vw; height: 2vw; margin: 1.5vw 0 0 31vw;">
+                            <img src = "../static/images/more.png" style = "width: 2vw; height: 2vw; margin: 1.5vw 0 0 31vw;">
                         </div>
                     </div>
                 </div>
