--- a/static/news.css
+++ b/static/news.css
@@ -85,7 +85,7 @@ body {
     box-shadow: rgba(86, 156, 114, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .small_navigation {
-    background-image: url(imgs/small_navigation.PNG);
+    background-image: url(imgs/small_navigation.png);
     padding: 1vw;
     font-size: 1.4vw;
     display: flex;
