--- a/templates/article5.html
+++ b/templates/article5.html
@@ -56,9 +56,9 @@
                             <p><a href = "info" title = "Info" style = "text-decoration: none; color: #00A66F;">Info</a></p>
                         </div>
                         <div class = "tools" id = "tools">
-                            <img src = "../static/images/search.PNG" alt="AquaEmi's search icon" style = "width: 2vw" id = "search_engine"></a>
-                            <a href = "index"><img src = "../static/images/notifications.PNG" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
-                            <a href = "index"><img src = "../static/images/profile.PNG" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
+                            <img src = "../static/images/search.png" alt="AquaEmi's search icon" style = "width: 2vw" id = "search_engine"></a>
+                            <a href = "index"><img src = "../static/images/notifications.png" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
+                            <a href = "index"><img src = "../static/images/profile.png" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
                         </div>
                     </div>
                 </div>
@@ -67,14 +67,14 @@
         <section>
             <div class = "overlay_search" id = "overlay_search">
                 <div class = "search_bar" id = "search_bar">
-                    <img src = "../static/images/search_back.PNG" style = "width: 1.5vw; height: 0.5w; margin-bottom: -0.15vw;" id = "search_back">
+                    <img src = "../static/images/search_back.png" style = "width: 1.5vw; height: 0.5w; margin-bottom: -0.15vw;" id = "search_back">
                     <input type = "text" id = "search_content" name = "search_content" placeholder = "Enter your location..." style = "font-size: 1vw;">
                     <i class="fa-solid fa-x fa-2xs" style="color: #00a56f;" id = "clear_search" onclick = "document.getElementById('search_content').value = ''"></i>
                 </div>
                 <div class = "search_result_box" id = "search_result_box">
                     {% for watersource in watersources_data %}
                         <div class = "search_result" id = "search_result" data_search_term="{{watersource.name}}" style="display: none;" onclick="location.href='{{url_for('detail_page', rivername=watersource.name)}}';">
-                            <img src = "../static/images/location.PNG" style = "width: 1vw; height: 1.3vw;">
+                            <img src = "../static/images/location.png" style = "width: 1vw; height: 1.3vw;">
                             <p style = "font-size: 1vw; color: #616161; margin: 0.2vw 0 0 0.7vw; ">{{watersource.name}}</p>
                             <p style = "font-size: 0.8vw; font-weight: bold; margin: 0.3vw 0 0 0.7vw;">{{watersource.followers}}</p>
                             <div class = "wqi_search_result" id = "wqi_search_result">{{watersource.quality}}</div>
@@ -101,7 +101,7 @@
                             <p style = "font-size: 1vw;">Water is an invaluable resource, essential for all life forms on Earth. However, with the growth of human activities, water pollution has become a pressing global issue. The contamination of water bodies by pollutants poses significant threats to both human health and the environment. This article aims to shed light on the current state of water pollution worldwide, analyze Water Quality Index (WQI) data, and explore potential remedial measures to address this critical issue.</p>
                             <p style = "font-size: 1vw;">Water pollution is a complex problem with multiple sources, including industrial discharges, agricultural runoff, sewage, and improper waste disposal. Major pollutants include nutrients, heavy metals, pathogens, and chemical contaminants. The consequences of water pollution are far-reaching, affecting both freshwater and marine ecosystems. Additionally, the contamination of water sources directly impacts human populations, leading to various waterborne diseases and compromising access to safe drinking water.</p>
                             <p style = "font-size: 1vw; font-weight: bold;">Water Quality Index (WQI) Data Analysis</p>
-                            <img src="../static/images/picture1_article5.PNG" alt="AquaEmi's Article5 first picture" style = "width: 80%; height: 80%; margin: 1vw 5vw">
+                            <img src="../static/images/picture1_article5.png" alt="AquaEmi's Article5 first picture" style = "width: 80%; height: 80%; margin: 1vw 5vw">
                             <p style = "font-size: 1vw;">To gauge the severity of water pollution and its impact on human and ecological health, the Water Quality Index (WQI) has been widely used as a quantitative tool. The WQI assesses multiple parameters, including dissolved oxygen, pH, biochemical oxygen demand (BOD), total dissolved solids (TDS), and presence of heavy metals and bacteria.</p>
                             <p style = "font-size: 1vw;">According to recent WQI data analysis from various countries, the overall water quality is alarming. Many water bodies, including rivers, lakes, and coastal areas, have WQI values below acceptable standards, indicating compromised water quality. For instance, in parts of Asia, such as India and China, water pollution is widespread due to industrial and agricultural activities, leading to reduced water quality and health hazards. Similarly, in parts of Africa and South America, inadequate sanitation practices contribute to the contamination of water sources, resulting in high WQI values.</p>
                             <p style = "font-size: 1vw; font-weight: bold;">Remedial Measures</p>
