--- a/templates/info.html
+++ b/templates/info.html
@@ -56,9 +56,9 @@
                             <p><a href = "info" title = "Info" style = "text-decoration: none; color: #00A66F;">Info</a></p>
                         </div>
                         <div class = "tools" id = "tools">
-                            <img src = "../static/images/search.PNG" alt="AquaEmi's search icon" style = "width: 2vw" id = "search_engine"></a>
-                            <a href = "index"><img src = "../static/images/notifications.PNG" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
-                            <a href = "index"><img src = "../static/images/profile.PNG" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
+                            <img src = "../static/images/search.png" alt="AquaEmi's search icon" style = "width: 2vw" id = "search_engine"></a>
+                            <a href = "index"><img src = "../static/images/notifications.png" alt="AquaEmi's notifications icon" style = "width: 1.75vw"></a>
+                            <a href = "index"><img src = "../static/images/profile.png" alt="AquaEmi's profile icon" style = "width: 1.7vw;"></a>
                         </div>
                     </div>
                 </div>
@@ -67,14 +67,14 @@
         <section>
             <div class = "overlay_search" id = "overlay_search">
                 <div class = "search_bar" id = "search_bar">
-                    <img src = "../static/images/search_back.PNG" style = "width: 1.5vw; height: 0.5w; margin-bottom: -0.15vw;" id = "search_back">
+                    <img src = "../static/images/search_back.png" style = "width: 1.5vw; height: 0.5w; margin-bottom: -0.15vw;" id = "search_back">
                     <input type = "text" id = "search_content" name = "search_content" placeholder = "Enter your location..." style = "font-size: 1vw;">
                     <i class="fa-solid fa-x fa-2xs" style="color: #00a56f;" id = "clear_search" onclick = "document.getElementById('search_content').value = ''"></i>
                 </div>
                 <div class = "search_result_box" id = "search_result_box">
                     {% for watersource in watersources_data %}
                         <div class = "search_result" id = "search_result" data_search_term="{{watersource.name}}" style="display: none;" onclick="location.href='{{url_for('detail_page', rivername=watersource.name)}}';">
-                            <img src = "../static/images/location.PNG" style = "width: 1vw; height: 1.3vw;">
+                            <img src = "../static/images/location.png" style = "width: 1vw; height: 1.3vw;">
                             <p style = "font-size: 1vw; color: #616161; margin: 0.2vw 0 0 0.7vw; ">{{watersource.name}}</p>
                             <p style = "font-size: 0.8vw; font-weight: bold; margin: 0.3vw 0 0 0.7vw;">{{watersource.followers}}</p>
                             <div class = "wqi_search_result" id = "wqi_search_result">{{watersource.quality}}</div>
@@ -87,7 +87,7 @@
                     <img src="../static/images/info_background.jpeg" alt="AquaEmi's background" style = "width: 100%; height: 20vw">
                     <p class = "over_background_header">WATER QUALITY INFORMATION</p>
                     <p class = "over_background_head">ANYTIME ANYWHERE!</p>
-                    <img src="../static/images/turtle.PNG" class = "over_background_image" alt="AquaEmi's turtle uwu" style = "margin-top: -5vw; width: 2%; height: 8%;">
+                    <img src="../static/images/turtle.png" class = "over_background_image" alt="AquaEmi's turtle uwu" style = "margin-top: -5vw; width: 2%; height: 8%;">
                 </div>
                 <div class = "reason" id = "reason">
                     <div class = "reason_head" id = "reason_head">
@@ -96,17 +96,17 @@
                     </div>
                     <div class = "reason_content" id = "reason_content">
                         <div class = "monitoring" id = "monitoring">
-                            <img src="../static/images/map_reason.PNG" alt="AquaEmi's monitoring reason" style = "width: 55%; height: 50%;">
+                            <img src="../static/images/map_reason.png" alt="AquaEmi's monitoring reason" style = "width: 55%; height: 50%;">
                             <p style = "font-size: 1.4vw; font-weight: bold;">Advanced Geolocation-Based Monitoring</p>
                             <p style = "font-size: 1vw;">AquaEmi utilizes cutting-edge geolocation tech to pinpoint pollution sources, assess water quality in real-time, and provide timely alerts to authorities and communities</p>
                         </div>
                         <div class = "visual" id = "visual">
-                            <img src="../static/images/visual_reason.PNG" alt="AquaEmi's visual reason" style = "width: 75%; height: 50%;">
+                            <img src="../static/images/visual_reason.png" alt="AquaEmi's visual reason" style = "width: 75%; height: 50%;">
                             <p style = "font-size: 1.4vw; font-weight: bold;">Advanced Geolocation-Based Monitoring</p>
                             <p style = "font-size: 1vw;">AquaEmi utilizes cutting-edge geolocation tech to pinpoint pollution sources, assess water quality in real-time, and provide timely alerts to authorities and communities</p>
                         </div>
                         <div class = "solution" id = "solution">
-                            <img src="../static/images/solution_reason.PNG" alt="AquaEmi's visual reason" style = "width: 40%; height: 50%;">
+                            <img src="../static/images/solution_reason.png" alt="AquaEmi's visual reason" style = "width: 40%; height: 50%;">
                             <p style = "font-size: 1.4vw; font-weight: bold;">Advanced Geolocation-Based Monitoring</p>
                             <p style = "font-size: 1vw;">AquaEmi utilizes cutting-edge geolocation tech to pinpoint pollution sources, assess water quality in real-time, and provide timely alerts to authorities and communities</p>
                         </div>
@@ -114,8 +114,8 @@
                 </div>
                 <div class = "about_us" id = "about_us">
                     <p style = "font-size: 2.5vw">About us</p>
-                    <img src="../static/images/hipster_intro.PNG" alt="AquaEmi's Hipster Intro" style = "width: 40%; height: 50%; margin-right: 5vw">
-                    <img src="../static/images/hacker_intro.PNG" alt="AquaEmi's Hacker Intro" style = "width: 40%; height: 50%;">
+                    <img src="../static/images/hipster_intro.png" alt="AquaEmi's Hipster Intro" style = "width: 40%; height: 50%; margin-right: 5vw">
+                    <img src="../static/images/hacker_intro.png" alt="AquaEmi's Hacker Intro" style = "width: 40%; height: 50%;">
                 </div>
                 <div class = "questions" id = "questions">
                     <p style = "font-size: 2.5vw">Any questions?</p>
