Make flag by country code works again

--- a/templates/rankings.html
+++ b/templates/rankings.html
@@ -116,7 +116,7 @@
                         <div class = "ranks" id = "ranks">
                             <div class = "number" id = "number"> {{ country.id }}</div>
                             <div class = "name" id = "name">
-                                <img src = "https://flagsapi.com/{{ country.country }}/flat/64.png" style = "width: 2vw; height: 1.4vw;">
+                                <img src = "https://flagsapi.com/{{ country.country_code }}/flat/64.png" style = "width: 2vw; height: 1.4vw;">
                                 <p style = "margin-left: 1vw; margin-top: 0vw"><a href = "" class = "location"> {{ country.name }} </a></p>
                             </div>
                             <div class = "quality" id = "quality">
